--- a/erts/emulator/test/Makefile
+++ b/erts/emulator/test/Makefile
@@ -108,6 +108,7 @@ MODULES= \
 	trace_meta_SUITE \
 	trace_call_count_SUITE \
 	trace_call_time_SUITE \
+	tracer_SUITE \
 	scheduler_SUITE \
 	old_scheduler_SUITE \
 	unique_SUITE \
